inserted text and images

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <link rel="stylesheet" href="css/mediaelement.css">
 <!-- My Awesome Styling -->
     <link rel="stylesheet" href="css/styles.css">
+<!-- Fonts -->   
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+
 
 </head>
 
@@ -31,8 +34,8 @@
 
 <!-- Header -->
     <header>
-        <h1>Movie Title</h1>
-        <h5>A Very Well Written Clever Slogan for A Subpar Movie</h5>
+        <h1>Creed II</h1>
+        <h5>PG-13 | Drama, Sport | 2h 10min | 21 Nov 2018</h5>
     </header>
 
 <!-- Main -->
@@ -45,40 +48,40 @@
     </video>
 
 <!-- Actors -->    
-        <section>
+        <section class="actors">
 
             <figure>
-                <img src="http://placehold.it/100x100" alt="Actor">
+                <img src="assets/img1.jpg" alt="Actor">
                 <figcaption>
-                    Name of Actor
+                    Micahel B. Jordan
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="http://placehold.it/100x100" alt="Actor">
+                <img src="assets/img2.png" alt="Actor">
                 <figcaption>
-                    Name of Actor
+                    Sylvester Stallone
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="http://placehold.it/100x100" alt="Actor">
+                <img src="assets/img3.jpg" alt="Actor">
                 <figcaption>
-                    Name of Actor
+                    Tessa Tompson
                 </figcaption>
             </figure>
             
             <figure>
-                <img src="http://placehold.it/100x100" alt="Actor">
+                <img src="assets/img4.jpg" alt="Actor">
                 <figcaption>
-                    Name of Actor
+                    Dolph Lundgren
                 </figcaption>
             </figure>
             
             <figure>
-                <img src="http://placehold.it/100x100" alt="Actor">
+                <img src="assets/img5.jpg" alt="Actor">
                 <figcaption>
-                    Name of Actor
+                    Florian Munteanu
                 </figcaption>
             </figure>
 
