--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
 <!-- Main -->
     <main>
+    <div class="body">
+            Years after Adonis Creed made a name for himself under Rocky Balboa's mentorship, the young boxer becomes the Heavyweight Champion of the World. While life is good with that victory and his marriage to Bianca, trouble comes to Philadelphia when Ivan Drago, the Russian boxer who killed Adonis' father, Apollo, arrives with his son, Viktor, to challenge Adonis. Against Rocky's advice, Adonis accepts the challenge without his mentor's participation and pays the price in a punishing bout he wins only by a technicality. Now injured and demoralized, Adonis cannot bring himself to back into the game, leaving his spirit and title in jeopardy. Together, Adonis' family and Rocky must find a way to rekindle Adonis' fighting spirit to face the future in whatever choice he makes. Meanwhile, the Drago family have its own troubles trying to regain the respect in their homeland that they lost at Rocky's hands as they wonder whether is it truly worth it.
+    </div>
         
     
 <!-- Trailer -->    
