--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
         
     
 <!-- Trailer -->    
-    <video controls>
+<div class="video">
+    <video controls poster="assets/creedposter.jpg">
         <source src="video/trailer.mp4">
         <source src="video/trailer.webm">
     </video>
+</div>
 
 <!-- Actors -->    
         <section class="actors">
